<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinpadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/enter_pincode"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView android:id="@+id/txtPin"
            android:text=""
            android:textSize="28sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:columnCount="3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnKey1"
                style="@style/PadButton"
                android:onClick="keyClick"
                android:text="@string/button_1" />

            <Button
                android:id="@+id/btnKey2"
                style="@style/PadButton"
                android:onClick="keyClick"
                android:text="@string/button_2" />

            <Button
                android:id="@+id/btnKey3"
                style="@style/PadButton"
                android:onClick="keyClick"
                android:text="@string/button_3" />

            <Button
                android:id="@+id/btnKey4"
                style="@style/PadButton"
                android:onClick="keyClick"
                android:text="@string/button_4" />

            <Button
                android:id="@+id/btnKey5"
                style="@style/PadButton"
                android:onClick="keyClick"
                android:text="@string/button_5" />

            <Button
                android:id="@+id/btnKey6"
                style="@style/PadButton"
                android:onClick="keyClick"
                android:text="@string/button_6" />

            <Button
                android:id="@+id/btnKey7"
                style="@style/PadButton"
                android:onClick="keyClick"
                android:text="@string/button_7" />

            <Button
                android:id="@+id/btnKey8"
                style="@style/PadButton"
                android:onClick="keyClick"
                android:text="@string/button_8" />

            <Button
                android:id="@+id/btnKey9"
                style="@style/PadButton"
                android:onClick="keyClick"
                android:text="@string/button_9" />

            <Button
                android:id="@+id/btnReset"
                style="@style/PadButton"
                android:onClick="keyClick"
                android:text="@string/button_c" />

            <Button
                android:id="@+id/btnKey0"
                style="@style/PadButton"
                android:onClick="keyClick"
                android:text="@string/button_0" />

            <Button
                android:id="@+id/btnOK"
                style="@style/PadButton"
                android:onClick="keyClick"
                android:text="@string/button_ok" />
        </GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>